load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/omussell/go_tests",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go_tests",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
go_rules_dependencies()
go_register_toolchains(go_version="host")
